filterCount js works

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
           <div class="products__filter">
             <div class="main-filter">
               <ul class="filter__list">
-                <li class="active-filter filter__item" data-filter="">ALL</li>
+                <li class="active-filter filter__item" data-filter="All">
+                  ALL
+                </li>
                 <li class="filter__item" data-filter="Keyboard">KEYBOARDS</li>
                 <li class="filter__item" data-filter="Keycaps">KEYCAPS</li>
                 <li class="filter__item" data-filter="Switches">SWITCHES</li>
@@ -117,27 +119,41 @@
                         <input class="color-checkbox" type="checkbox" id="c1" />
                         <label for="c1">Black</label>
                       </div>
-                      <span class="filterCount">5</span>
+                      <span class="filterCount"></span>
                     </div>
                     <div class="subfilter__row testClass">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c3" />
                         <label for="c3">White</label>
                       </div>
-                      <span class="filterCount">5</span>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c4" />
-                      <label for="c4">Blue</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c4" />
+                        <label for="c4">Blue</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c8" />
-                      <label for="c8">Red</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c8" />
+                        <label for="c8">Red</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c11" />
-                      <label for="c11">Gold</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input
+                          class="color-checkbox"
+                          type="checkbox"
+                          id="c11"
+                        />
+                        <label for="c11">Gold</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
+
                     <div class="subfilter__row">
                       <input class="color-checkbox" type="checkbox" id="c9" />
                       <label for="c9">Pink</label>
@@ -172,13 +188,19 @@
                     <span class="subfilter__clear-brand">Clear</span>
                   </div>
                   <div class="subfilter__row-container">
-                    <div class="subfilter__row">
-                      <input class="brand-checkbox" type="checkbox" id="b2" />
-                      <label for="b2">Nuphy</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="brand-checkbox" type="checkbox" id="b2" />
+                        <label for="b2">Nuphy</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="brand-checkbox" type="checkbox" id="b1" />
-                      <label for="b1">Royal Kludge</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="brand-checkbox" type="checkbox" id="b1" />
+                        <label for="b1">Royal Kludge</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
                   </div>
                 </div>
@@ -206,14 +228,14 @@
               data-category="Switches"
               data-color="c1,c4"
               data-brand="b1"
-              data-price="499"
+              data-price="199"
               data-order="1"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
                   <div class="prod-name">
-                    <span>Royal Kludge</span>
+                    <span>Royal Kludge black blue</span>
                     <h3 class="name">
                       Switchhh klasdjf llaskdjf;laskjdf a;lsk
                     </h3>
@@ -225,7 +247,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                   </div>
-                  <h4 class="price">€499</h4>
+                  <h4 class="price">€199</h4>
                 </div>
                 <!-- <div class="labels">
                   <button class="label type">Keyboard</button>
@@ -295,16 +317,16 @@
             <div
               class="product-card"
               data-category="Keyboard"
-              data-color="c1,c4"
+              data-color="c8"
               data-brand="b1"
-              data-price="499"
-              data-order="1"
+              data-price="299"
+              data-order="2"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
                   <div class="prod-name">
-                    <span>Royal Kludge</span>
+                    <span>Royal Kludge red</span>
                     <h3 class="name">Keygoaklsjdf 23</h3>
                   </div>
                   <div class="ratings">
@@ -314,7 +336,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                   </div>
-                  <h4 class="price">€499</h4>
+                  <h4 class="price">€299</h4>
                 </div>
                 <!-- <div class="labels">
                   <button class="label type">Keyboard</button>
@@ -384,16 +406,16 @@
             <div
               class="product-card"
               data-category="Keyboard"
-              data-color="c1,c4"
-              data-brand="b1"
-              data-price="499"
-              data-order="1"
+              data-color="c1,c8"
+              data-brand="b2"
+              data-price="399"
+              data-order="4"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
                   <div class="prod-name">
-                    <span>Royal Kludge</span>
+                    <span>Nuphy black red</span>
                     <h3 class="name">Keyboard c123</h3>
                   </div>
                   <div class="ratings">
@@ -403,7 +425,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                   </div>
-                  <h4 class="price">€499</h4>
+                  <h4 class="price">€399</h4>
                 </div>
                 <!-- <div class="labels">
                   <button class="label type">Keyboard</button>
@@ -473,16 +495,16 @@
             <div
               class="product-card"
               data-category="Keycaps"
-              data-color="c1,c4"
-              data-brand="b1"
+              data-color="c3"
+              data-brand="b2"
               data-price="499"
-              data-order="1"
+              data-order="3"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
                   <div class="prod-name">
-                    <span>Royal Kludge</span>
+                    <span>Nuphy white</span>
                     <h3 class="name">Keycap blauw</h3>
                   </div>
                   <div class="ratings">
