Some extra testing and dummy code
Seems to be working

--- a/index.html
+++ b/index.html
@@ -154,25 +154,44 @@
                       <span class="filterCount"></span>
                     </div>
 
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c9" />
-                      <label for="c9">Pink</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c9" />
+                        <label for="c9">Pink</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c5" />
-                      <label for="c5">Green</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c5" />
+                        <label for="c5">Green</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c6" />
-                      <label for="c6">Yellow</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c6" />
+                        <label for="c6">Yellow</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c7" />
-                      <label for="c7">Orange</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c7" />
+                        <label for="c7">Orange</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c10" />
-                      <label for="c10">Purple</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input
+                          class="color-checkbox"
+                          type="checkbox"
+                          id="c10"
+                        />
+                        <label for="c10">Purple</label>
+                      </div>
+                      <span class="filterCount"></span>
                     </div>
                   </div>
                 </div>
