section to dialog

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal hidden">
+              <dialog class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -439,7 +439,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </dialog>
             </div>
           </div>
         </section>
