minor fug fixes

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal hidden">
+              <dialog class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -526,7 +526,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </dialog>
             </div>
             <div
               class="product-card"
@@ -558,7 +558,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal hidden">
+              <dialog class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -615,7 +615,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </dialog>
             </div>
             <div
               class="product-card"
@@ -647,7 +647,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal hidden">
+              <dialog class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -702,7 +702,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </dialog>
             </div>
             <div
               class="product-card"
@@ -734,7 +734,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal hidden">
+              <dialog class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -791,7 +791,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </dialog>
             </div>
             <div
               class="product-card"
@@ -823,7 +823,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal hidden">
+              <dialog class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -880,7 +880,7 @@
                     </div>
                   </div>
                 </div>
-              </section>
+              </dialog>
             </div>
           </div>
         </section>
