--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Styles -->
-
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/flickity@3.0.0/dist/flickity.min.css"
-    />
-    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <link rel="stylesheet" href="./cssMain/style.css" />
-
     <!-- JS -->
     <script src="./js/index.js" type="module"></script>
-
     <!-- Fonts and icons -->
     <link
       rel="stylesheet"
@@ -57,7 +49,9 @@
                 src="./images/welcome/keykaps-logo.jpg"
                 alt=""
             /></a>
-            <a class="logo-btn" href="#"><h2 class="logo">KEYKAPS</h2></a>
+            <a class="logo-btn" href="#">
+              <h2 class="logo">KEYKAPS</h2>
+            </a>
           </div>
           <nav class="main-nav">
             <ul class="nav__list">
