welcome screen: failing miserably

--- a/index.html
+++ b/index.html
@@ -81,11 +81,13 @@
               <p class="title title2">Mechanical Keyboards</p>
             </div>
           </div>
-          <img
-            class="welcome__image"
-            src="images/welcome/keykapsWelcome.jpg"
-            alt=""
-          />
+          <div class="welcome__image-container">
+            <!-- <img
+              class="welcome__image"
+              src="images/welcome/keykapsWelcome.jpg"
+              alt=""
+            /> -->
+          </div>
         </section>
         <section class="products" id="products">
           <div class="products__filter">
