--- a/index.html
+++ b/index.html
@@ -120,35 +120,35 @@
                       ?>
                       include('./assets/php/includes/createColors.incl.php');
                     -->
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c1" />
                         <label for="c1">Black</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c3" />
                         <label for="c3">White</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c4" />
                         <label for="c4">Blue</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c8" />
                         <label for="c8">Red</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input
                           class="color-checkbox"
@@ -160,35 +160,35 @@
                       <span class="filterCount"></span>
                     </div>
 
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c9" />
                         <label for="c9">Pink</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c5" />
                         <label for="c5">Green</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c6" />
                         <label for="c6">Yellow</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="color-checkbox" type="checkbox" id="c7" />
                         <label for="c7">Orange</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input
                           class="color-checkbox"
@@ -217,14 +217,14 @@
                       include('./assets/php/includes/createBrands.incl.php');
                       ?>
                     -->
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="brand-checkbox" type="checkbox" id="b2" />
                         <label for="b2">Nuphy</label>
                       </div>
                       <span class="filterCount"></span>
                     </div>
-                    <div class="subfilter__row testClass">
+                    <div class="subfilter__row">
                       <div class="filterAndLabel">
                         <input class="brand-checkbox" type="checkbox" id="b1" />
                         <label for="b1">Royal Kludge</label>
