--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                 >
                   Colors
                 </button>
-                <div class="hidden subfilter__selection">
+                <div
+                  class="hidden subfilter__selection animate__animated animate__duration-30ms"
+                >
                   <div class="subfilter__clear">
                     <span class="subfilter__clear-color">Clear</span>
                   </div>
@@ -207,7 +209,7 @@
                 <button class="general-subfilter-btn subfilter-btn">
                   Brand
                 </button>
-                <div class="subfilter__selection hidden">
+                <div class="subfilter__selection hidden animate__animated">
                   <div class="subfilter__clear">
                     <span class="subfilter__clear-brand">Clear</span>
                   </div>
