--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <button
                   class="general-subfilter-btn subfilter-btn subfilter-btn-colors"
                 >
-                  Colors
+                  Colors <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <div
                   class="hidden subfilter__selection animate__animated animate__duration-30ms"
@@ -207,7 +207,7 @@
 
               <div class="subfilter__section subfilter__brands-section">
                 <button class="general-subfilter-btn subfilter-btn">
-                  Brand
+                  Brand <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <div class="subfilter__selection hidden animate__animated">
                   <div class="subfilter__clear">
