New sort btn working (JS)

--- a/index.html
+++ b/index.html
@@ -249,49 +249,42 @@
                         <input
                           class="sort-radio"
                           type="radio"
-                          id="s1"
+                          id="dateNO"
                           name="sort"
                           checked
                         />
-                        <label for="s1">Date, new to old</label>
+                        <label for="dateNO">Date, new to old</label>
                       </div>
                       <div class="subfilter__row">
                         <input
                           class="sort-radio"
                           type="radio"
-                          id="s1"
+                          id="dateON"
                           name="sort"
                         />
-                        <label for="s1">Date, Old to New</label>
+                        <label for="dateON">Date, Old to New</label>
                       </div>
                       <div class="subfilter__row">
                         <input
                           class="sort-radio"
                           type="radio"
-                          id="s1"
+                          id="priceLH"
                           name="sort"
                         />
-                        <label for="s1">Price, Low to High</label>
+                        <label for="priceLH">Price, Low to High</label>
                       </div>
                       <div class="subfilter__row">
                         <input
                           class="sort-radio"
                           type="radio"
-                          id="s1"
+                          id="priceHL"
                           name="sort"
                         />
-                        <label for="s1">Price, High to Low</label>
+                        <label for="priceHL">Price, High to Low</label>
                       </div>
                     </div>
                   </div>
                 </div>
-                <label class="hidden" for="sort">Sort:</label>
-                <select class="hidden" name="sort" id="sort">
-                  <option value="priceHL">Price, high to low</option>
-                  <option value="priceLH">Price, low to high</option>
-                  <option value="dateON">Date, old to new</option>
-                  <option value="dateNO">Date, new to old</option>
-                </select>
               </div>
             </div>
             <div class="subfilter-active">
