Open close arrows work

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   Colors <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <div
-                  class="hidden subfilter__selection animate__animated animate__duration-30ms"
+                  class="hidden subfilter__selection animate__animated animate__fadeIn"
                 >
                   <div class="subfilter__clear">
                     <span class="subfilter__clear-color">Clear</span>
@@ -209,7 +209,9 @@
                 <button class="general-subfilter-btn subfilter-btn">
                   Brand <i class="fa-solid fa-chevron-down"></i>
                 </button>
-                <div class="subfilter__selection hidden animate__animated">
+                <div
+                  class="subfilter__selection hidden animate__animated animate__fadeIn"
+                >
                   <div class="subfilter__clear">
                     <span class="subfilter__clear-brand">Clear</span>
                   </div>
@@ -242,7 +244,7 @@
                     Sort <i class="fa-solid fa-chevron-down"></i>
                   </button>
                   <div
-                    class="hidden subfilter__selection sort__selection animate__animated"
+                    class="hidden subfilter__selection sort__selection animate__animated animate__fadeIn"
                   >
                     <div class="subfilter__row-container sort__row-container">
                       <div class="subfilter__row">
