subfilter btns black color

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
               <div class="subfilter__section subfilter__brands-section">
                 <button class="general-subfilter-btn subfilter-btn">
-                  Brand <i class="fa-solid fa-chevron-down"></i>
+                  Brands <i class="fa-solid fa-chevron-down"></i>
                 </button>
                 <div
                   class="subfilter__selection hidden animate__animated animate__fadeIn"
