--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   </div>
                 </div>
               </section>
-              <dialog open class="product-modal">
+              <dialog class="product-modal">
                 <div class="product-details">
                   <!-- <i class="close fa-solid fa-chevron-left"></i> -->
                   <i class="close fa-solid fa-xmark"></i>
