jsdocs and startup sort condition

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                   >
                     <div class="subfilter__row-container sort__row-container">
                       <div class="subfilter__row">
-                        <label for="dateNO">Date, new to old</label>
+                        <label for="dateNO">Date, New to Old</label>
                         <input
                           class="sort-radio"
                           type="radio"
@@ -307,7 +307,7 @@
               data-color="c1,c4"
               data-brand="b1"
               data-price="199"
-              data-order="1"
+              data-order="7"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
@@ -398,7 +398,7 @@
               data-color="c1,c4"
               data-brand="b1"
               data-price="499"
-              data-order="1"
+              data-order="6"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
@@ -487,7 +487,7 @@
               data-color="c1,c4"
               data-brand="b1"
               data-price="199"
-              data-order="1"
+              data-order="5"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
@@ -575,7 +575,7 @@
               data-color="c8"
               data-brand="b1"
               data-price="299"
-              data-order="2"
+              data-order="4"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
@@ -664,7 +664,7 @@
               data-color="c1,c8"
               data-brand="b2"
               data-price="399"
-              data-order="4"
+              data-order="3"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
@@ -751,7 +751,7 @@
               data-color="c3"
               data-brand="b2"
               data-price="499"
-              data-order="3"
+              data-order="2"
             >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
