First go at carousel in up to date prodct card

--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
               </button>
             </div>
           </div>
+
           <div class="grid-container">
             <a href="#products" class="back2prods"
               ><i class="fa-solid fa-circle-chevron-up"></i
@@ -319,13 +320,26 @@
               data-order="1"
             >
               <section class="card-front">
-                <figure>
+                <div class="swiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="images/sliderImages/keycapsBlack.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/sliderImages/keykapsGreen.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="images/sliderImages/nuphyAir96.jpg" alt="" />
+                    </div>
+                  </div>
+                </div>
+                <!-- <figure>
                   <img src="./images/welcome/kb-rk84.webp" alt="" />
                   <img src="./images/sliderImages/keykapsBlue.jpg" alt="" />
                   <img src="./images/sliderImages/nuphy1.jpg" alt="" />
                   <img src="./images/sliderImages/switchBrown.jpg" alt="" />
                   <img src="./images/sliderImages/nuphy3.jpg" alt="" />
-                </figure>
+                </figure> -->
                 <div class="description">
                   <div class="prod-name">
                     <span
@@ -361,6 +375,7 @@
                       <img src="./images/sliderImages/nuphy3.jpg" alt="" />
                     </figure>
                   </div>
+
                   <div class="text">
                     <div class="product">
                       <h3 class="name">Nuphy 1</h3>
